--- a/SampleProj/.project
+++ b/SampleProj/.project
@@ -2,8 +2,8 @@
 <projectDescription>
 	<name>SampleProj by capgemini</name>
 	<comment></comment>
-	<projects>
-	</projects>
+	<project>
+	</project>
 	<buildSpec>
 	</buildSpec>
 	<natures>
